--- a/TripPlanner.html
+++ b/TripPlanner.html
@@ -154,6 +154,7 @@ function edit_Trip(){
   writeTableHeaders();
   writeTableContent();
 }
+//rewrite in more condensed format
 function insertRow(index){
     var tripInfo = [];
       var table = document.getElementById('trips');
